@@ -10,18 +10,21 @@ module PageObject
         # @return [PageObject::Elements::ListItem]
         #
         def [](idx)
-          items = list_items.find_all { |item| item.parent == element }
-          Object::PageObject::Elements::ListItem.new(items[idx], :platform => :watir_webdriver)
+          Object::PageObject::Elements::ListItem.new(children[idx], :platform => :watir_webdriver)
         end
 
         #
         # Return the number of items contained in the ordered list
         #
         def items
-          list_items.size
+          children.size
         end
 
         private
+
+        def children
+          list_items.find_all { |item| item.parent == element }
+        end
 
         def list_items
           element.ols(:xpath => child_xpath)
