@@ -40,11 +40,12 @@ describe PageObject::Elements::OrderedList do
 
       it "should know how many list items it contains" do
         ol = PageObject::Elements::OrderedList.new(ol_element, :platform => :watir_webdriver)
-        ol_element.stub(:wd).and_return(ol_element)
-        ol_element.should_receive(:find_elements).with(:xpath, ".//child::li").and_return(ol_element)
-        ol_element.stub(:[]).and_return(ol_element)
-        ol_element.stub(:size).and_return(5)
-        ol.items.should == 5
+        ol_element.stub(:find_elements).and_return(ol_element)
+        ol_element.stub(:map).and_return([ol_element])
+        ol_element.stub(:parent).and_return(ol_element)
+        ol_element.stub(:element).and_return(ol_element)
+        ol_element.stub(:==).and_return(true)
+        ol.items.should == 1
       end
 
       it "should iterate over the list items" do
@@ -70,9 +71,12 @@ describe PageObject::Elements::OrderedList do
 
       it "should know how many list items it contains" do
         ol = PageObject::Elements::OrderedList.new(ol_element, :platform => :selenium_webdriver)
-        ol_element.should_receive(:find_elements).with(:xpath, ".//child::li").and_return(ol_element)
-        ol_element.should_receive(:size).and_return(5)
-        ol.items.should == 5
+        ol_element.should_receive(:find_elements).and_return(ol_element)
+        ol_element.should_receive(:map).and_return([ol_element])
+        ol_element.should_receive(:parent).and_return(ol_element)
+        ol_element.should_receive(:element).and_return(ol_element)
+        ol_element.should_receive(:==).and_return(true)
+        ol.items.should == 1
       end
 
       it "should iterate over the list items" do
